[tool.poetry]
name = "peer-to-peer"
version = "0.1.0"
description = ""
authors = ["John Idogun <sirneij@gmail.com>"]
readme = "README.md"
packages = [{include = "peer_to_peer"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
